Made some edits to correct spacing and padding issues

--- a/static/css/flipCard.css
+++ b/static/css/flipCard.css
@@ -22,8 +22,8 @@ div.card-container {
 /* === CARD === */
 
 .card-container .card {
-	width: 100%;
-	height: 100%;
+	width: 90%;
+	height: 90%;
 
 	display: inline-block;
 	padding: 0;
